0033418: Modeling Algorithms - BRepExtrema_DistShapeShape wrong arc ellipse - point result

Wrong calculation of distance arises for ellipse with MajorRadius == MinorRadius when first or last parameter of trimmed ellipse more then 2*pi
This case should be calculated as circle